--- a/index.html
+++ b/index.html
@@ -85,16 +85,35 @@
             visibility: visible;
             opacity: 1;
         }
+        .chart {
+            margin-top: 20px;
+        }
+        #high-contrast {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 10px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #high-contrast.active {
+            background-color: #000;
+            color: #FFF;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Interactive Metrics Calculator</h1>
+    <button id="high-contrast" onclick="toggleHighContrast()">High Contrast Mode</button>
+    <div class="container" aria-labelledby="calculator-title">
+        <h1 id="calculator-title">Interactive Metrics Calculator</h1>
 
         <div class="input-group">
             <label for="tp">True Positives (TP):</label>
-            <input type="range" id="tp-range" min="1" max="100" value="10" oninput="syncInput('tp-range', 'tp')">
-            <input type="number" id="tp" value="10" min="1" oninput="syncRange('tp', 'tp-range')">
+            <input type="range" id="tp-range" min="1" max="100" value="10" oninput="syncInput('tp-range', 'tp'); calculateMetrics();">
+            <input type="number" id="tp" value="10" min="1" oninput="syncRange('tp', 'tp-range'); calculateMetrics();" aria-labelledby="tp-label">
             <div class="tooltip">?
                 <span class="tooltiptext">Number of correct positive predictions</span>
             </div>
@@ -102,8 +121,8 @@
 
         <div class="input-group">
             <label for="tn">True Negatives (TN):</label>
-            <input type="range" id="tn-range" min="1" max="100" value="10" oninput="syncInput('tn-range', 'tn')">
-            <input type="number" id="tn" value="10" min="1" oninput="syncRange('tn', 'tn-range')">
+            <input type="range" id="tn-range" min="1" max="100" value="10" oninput="syncInput('tn-range', 'tn'); calculateMetrics();">
+            <input type="number" id="tn" value="10" min="1" oninput="syncRange('tn', 'tn-range'); calculateMetrics();" aria-labelledby="tn-label">
             <div class="tooltip">?
                 <span class="tooltiptext">Number of correct negative predictions</span>
             </div>
@@ -111,8 +130,8 @@
 
         <div class="input-group">
             <label for="fp">False Positives (FP):</label>
-            <input type="range" id="fp-range" min="1" max="100" value="5" oninput="syncInput('fp-range', 'fp')">
-            <input type="number" id="fp" value="5" min="0" oninput="syncRange('fp', 'fp-range')">
+            <input type="range" id="fp-range" min="1" max="100" value="5" oninput="syncInput('fp-range', 'fp'); calculateMetrics();">
+            <input type="number" id="fp" value="5" min="0" oninput="syncRange('fp', 'fp-range'); calculateMetrics();" aria-labelledby="fp-label">
             <div class="tooltip">?
                 <span class="tooltiptext">Number of incorrect positive predictions</span>
             </div>
@@ -120,20 +139,28 @@
 
         <div class="input-group">
             <label for="fn">False Negatives (FN):</label>
-            <input type="range" id="fn-range" min="1" max="100" value="5" oninput="syncInput('fn-range', 'fn')">
-            <input type="number" id="fn" value="5" min="0" oninput="syncRange('fn', 'fn-range')">
+            <input type="range" id="fn-range" min="1" max="100" value="5" oninput="syncInput('fn-range', 'fn'); calculateMetrics();">
+            <input type="number" id="fn" value="5" min="0" oninput="syncRange('fn', 'fn-range'); calculateMetrics();" aria-labelledby="fn-label">
             <div class="tooltip">?
                 <span class="tooltiptext">Number of incorrect negative predictions</span>
             </div>
         </div>
 
-        <button onclick="calculateMetrics()">Calculate</button>
-
-        <div class="result" id="result">
+        <div class="result" id="result" aria-live="polite">
             <!-- Results will be displayed here -->
         </div>
+
+        <canvas id="metricsChart" class="chart"></canvas>
+
+        <h2>Feedback</h2>
+        <form action="https://formspree.io/YOUREMAIL" method="POST">
+            <label for="feedback">Your feedback:</label>
+            <textarea id="feedback" name="feedback" rows="4" style="width: 100%;"></textarea>
+            <button type="submit">Submit Feedback</button>
+        </form>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         function syncInput(rangeId, inputId) {
             document.getElementById(inputId).value = document.getElementById(rangeId).value;
@@ -165,6 +192,47 @@
                 <p><strong>NPV:</strong> ${npv.toFixed(2)}</p>
                 <p><strong>F1 Score:</strong> ${f1_score.toFixed(2)}</p>
             `;
+
+            updateChart([accuracy, precision, recall, specificity, npv, f1_score]);
+        }
+
+        function updateChart(data) {
+            const ctx = document.getElementById('metricsChart').getContext('2d');
+            if (window.myChart) {
+                window.myChart.destroy();
+            }
+            window.myChart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: ['Accuracy', 'Precision', 'Recall', 'Specificity', 'NPV', 'F1 Score'],
+                    datasets: [{
+                        label: 'Metrics',
+                        data: data,
+                        backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+        }
+
+        function toggleHighContrast() {
+            const body = document.body;
+            const button = document.getElementById('high-contrast');
+            if (body.classList.contains('high-contrast')) {
+                body.classList.remove('high-contrast');
+                button.classList.remove('active');
+            } else {
+                body.classList.add('high-contrast');
+                button.classList.add('active');
+            }
         }
     </script>
 </body>
