--- a/index.html
+++ b/index.html
@@ -20,37 +20,70 @@
             --dark-mode-result-bg-color: #666;
             --label-color: #555;
         }
-        
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: var(--background-color);
-            color: var(--text-color);
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            min-height: 100vh;
-            transition: background-color 0.3s, color 0.3s;
-        }
+		
+		body {
+			font-family: 'Roboto', sans-serif;
+			background-color: var(--background-color);
+			color: var(--text-color);
+			margin: 0;
+			padding: 0;
+			display: flex;
+			justify-content: center;
+			align-items: flex-start;
+			min-height: 100vh;
+			transition: background-color 0.3s, color 0.3s;
+			font-size: 1rem; /* Base font size */
+		}
 
-        main {
-            background-color: var(--container-bg-color);
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            max-width: 800px;
-            width: 100%;
-            margin: 40px auto;
-        }
+		main {
+			background-color: var(--container-bg-color);
+			padding: 20px;
+			border-radius: 8px;
+			box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+			max-width: 800px;
+			width: 100%;
+			margin: 80px auto 40px auto;
+		}
 
-        h1 {
-            text-align: center;
-            color: var(--primary-color);
-            margin-bottom: 20px;
-            font-size: 1.75rem;
-            animation: fadeInDown 1s ease-out;
-        }
+		h1 {
+			text-align: center;
+			color: var(--primary-color);
+			margin: 0;
+			font-size: 1.75rem;
+			animation: fadeInDown 1s ease-out;
+			position: fixed;
+			top: 0;
+			left: 0;
+			width: 100%;
+			background-color: var(--container-bg-color);
+			padding: 20px 0;
+			box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+			z-index: 1000;
+		}
+
+		@media (max-width: 768px) {
+			main {
+				padding: 15px;
+				margin-top: 100px;
+			}
+			h1 {
+				font-size: 1.5rem;
+			}
+			.metric-group {
+				grid-template-columns: 1fr;
+			}
+		}
+
+		@media (max-width: 480px) {
+			main {
+				padding: 10px;
+				margin-top: 80px;
+			}
+			h1 {
+				font-size: 1.25rem;
+				padding: 15px 0;
+			}
+		}
 
         .input-section {
 			background-color: var(--input-bg-color);
@@ -416,12 +449,12 @@
 			margin-right: 8px;
 			font-size: 1.2rem;
 		}
-
-        #dark-mode-toggle {
-			position: fixed;
-			top: 15px;
-			right: 15px;
-			width: 60px; /* Adjusted width for icons */
+		
+		#dark-mode-toggle {
+			position: fixed; /* Fixes the toggle button to the viewport */
+			right: 20px; /* Distance from the right edge of the viewport */
+			top: 10px; /* Distance from the top of the viewport */
+			width: 60px;
 			height: 30px;
 			background-color: #ccc;
 			border-radius: 15px;
@@ -429,9 +462,9 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
-			padding: 0 5px; /* Adjust padding to fit within the container */
+			padding: 0 5px;
 			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-			z-index: 1000; /* Ensure it's on top of other elements */
+			z-index: 1001; /* Ensure it's on top of the title */
 		}
 
 		#dark-mode-toggle .icon {
@@ -481,6 +514,12 @@
         .dark-mode main {
             background-color: var(--dark-mode-container-bg-color);
         }
+		
+		.dark-mode h1 {
+			background-color: var(--dark-mode-container-bg-color); /* Update the header background in dark mode */
+			color: var(--dark-mode-text-color); /* Update the text color in dark mode */
+			transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+		}
 
         .dark-mode .input-section {
             background-color: var(--dark-mode-input-bg-color);
